Refactor CSS styles for age calculator app

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </form>
       <div class="age-container">
         <p id="years" class="age">
-          <span></span>
+          <span>38</span>
           years
         </p>
         <p id="months" class="age">
