--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             id="day"
             min="1"
             max="31"
-            value="24"
+            placeholder="DD"
           />
         </div>
         <div class="form-group">
@@ -37,7 +37,7 @@
             id="month"
             min="1"
             max="12"
-            value="09"
+            placeholder="MM"
           />
         </div>
         <div class="form-group">
@@ -48,7 +48,7 @@
             id="year"
             min="1900"
             max="2020"
-            value="1984"
+            placeholder="YYYY"
           />
         </div>
         <div class="submit-button">
@@ -60,15 +60,15 @@
       </form>
       <div class="age-container">
         <p id="years" class="age">
-          <span>38</span>
+          <span>--</span>
           years
         </p>
         <p id="months" class="age">
-          <span>3</span>
+          <span>--</span>
           month
         </p>
         <p id="days" class="age">
-          <span>26</span>
+          <span>--</span>
           days
         </p>
       </div>
