--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
@@ -12,7 +10,6 @@
       href="./assets/images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="css/styles.css" />
-
     <title>Juan M. Torrijos | Age calculator app</title>
   </head>
   <body>
@@ -21,6 +18,8 @@
         <div class="form-group">
           <label for="day">Day</label>
           <input
+            required
+            autofocus
             type="number"
             name="day"
             id="day"
@@ -32,6 +31,7 @@
         <div class="form-group">
           <label for="month">Month</label>
           <input
+            required
             type="number"
             name="month"
             id="month"
@@ -43,6 +43,7 @@
         <div class="form-group">
           <label for="year">Year</label>
           <input
+            required
             type="number"
             name="year"
             id="year"
@@ -73,5 +74,7 @@
         </p>
       </div>
     </div>
+    <script type="module" src="js/animate-nums.js"></script>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
