Refactor HTML structure to use <main> element for the age calculator app container

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Juan M. Torrijos | Age calculator app</title>
   </head>
   <body>
-    <div class="age-calculator-app-container">
+    <main class="age-calculator-app-container">
       <form class="calculator-form">
         <div class="form-group">
           <label for="day">Day</label>
@@ -60,10 +60,10 @@
         </div>
       </form>
       <div class="age-container">
-        <p id="years" class="age">
+        <h1 id="years" class="age">
           <span>--</span>
           years
-        </p>
+        </h1>
         <p id="months" class="age">
           <span>--</span>
           months
@@ -73,7 +73,7 @@
           days
         </p>
       </div>
-    </div>
+    </main>
     <script type="module" src="js/animate-nums.js"></script>
     <script type="module" src="js/main.js"></script>
   </body>
